contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/upgradeable/fail/non_struct_input.rs
// UI (trybuild) negative test: `#[upgradeable]` must be applied to a struct.

#[common_macros::upgradeable]
pub enum NotAStruct {
    A,
}

fn main() {}
