contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/upgradeable/fail/non_struct_input.stderr
error: custom attribute panicked
 --> tests/ui/upgradeable/fail/non_struct_input.rs:3:1
  |
3 | #[common_macros::upgradeable]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: failed to parse struct: expected `struct`
